package at.htlleonding.entity.dto;

public record EmailDTO (String email, Long id, Long electionId) {
}
